# webview-pixi

./: .gitignore  CMakeLists.txt  README.md
app/: index.html  package.json
app/src/: bindings.ts  get-texture.ts  main.ts  resize.ts  style.css
cmake/: internal_colors.cmake
scripts/: bundle-resources.js  create-index-html.js  package.json
src/: bindings.h  main.c  resources.c  resources.h
src/bindings/: all.c  resources.c
